rust_writer_procedural/tests/ui/impl_finder_fails_if_found_field_isnt_array.stderr
error: Expected a field named found being [bool;N] inside struct.
 --> tests/ui/impl_finder_fails_if_found_field_isnt_array.rs:6:8
  |
6 | struct SomeStruct {
  |        ^^^^^^^^^^
